// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`manual-meta-alarm-form Renders \`manual-meta-alarm-form\` with alarms 1`] = `
<div
  class="layout column"
>
  <div
    class="v-input theme--light v-text-field v-select v-autocomplete"
  >
    <div
      class="v-input__control"
    >
      <div
        aria-expanded="false"
        aria-haspopup="listbox"
        class="v-input__slot"
        role="combobox"
      >
        <div
          class="v-select__slot"
        >
          <label
            class="v-label theme--light"
            style="left: 0px; position: absolute;"
          >
            Manual meta alarm
          </label>
          <input
            autocomplete="off"
            type="text"
          />
          <div
            class="v-input__append-inner"
          >
            <div
              class="v-input__icon v-input__icon--append"
            >
              <i
                aria-hidden="true"
                class="v-icon notranslate material-icons theme--light"
              >
                arrow_drop_down
              </i>
            </div>
          </div>
          <input
            name="manualMetaAlarm"
            type="hidden"
          />
        </div>
        <div
          class="v-menu"
        >
          <!---->
        </div>
      </div>
      <div
        class="v-text-field__details"
      >
        <div
          class="v-messages theme--light"
        >
          <transition-group-stub
            class="v-messages__wrapper"
            name="message-transition"
            tag="div"
          />
        </div>
      </div>
    </div>
  </div>
  <div
    class="v-input theme--light v-text-field"
  >
    <div
      class="v-input__control"
    >
      <div
        class="v-input__slot"
      >
        <div
          class="v-text-field__slot"
        >
          <label
            class="v-label theme--light"
            style="left: 0px; position: absolute;"
          >
            Note
          </label>
          <input
            type="text"
          />
        </div>
      </div>
      <div
        class="v-text-field__details"
      >
        <div
          class="v-messages theme--light"
        >
          <transition-group-stub
            class="v-messages__wrapper"
            name="message-transition"
            tag="div"
          />
        </div>
      </div>
    </div>
  </div>
  <c-enabled-field-stub
    label="Auto resolve"
  />
</div>
`;

exports[`manual-meta-alarm-form Renders \`manual-meta-alarm-form\` with alarms 2`] = `undefined`;

exports[`manual-meta-alarm-form Renders \`manual-meta-alarm-form\` with default props 1`] = `
<div
  class="layout column"
>
  <div
    class="v-input v-input--is-label-active v-input--is-dirty theme--light v-text-field v-select v-autocomplete"
  >
    <div
      class="v-input__control"
    >
      <div
        aria-expanded="false"
        aria-haspopup="listbox"
        class="v-input__slot"
        role="combobox"
      >
        <div
          class="v-select__slot"
        >
          <label
            class="v-label v-label--active theme--light"
            style="left: 0px; position: absolute;"
          >
            Manual meta alarm
          </label>
          <input
            autocomplete="off"
            type="text"
          />
          <div
            class="v-input__append-inner"
          >
            <div
              class="v-input__icon v-input__icon--append"
            >
              <i
                aria-hidden="true"
                class="v-icon notranslate material-icons theme--light"
              >
                arrow_drop_down
              </i>
            </div>
          </div>
          <input
            name="manualMetaAlarm"
            type="hidden"
            value="metaAlarm"
          />
        </div>
        <div
          class="v-menu"
        >
          <!---->
        </div>
      </div>
      <div
        class="v-text-field__details"
      >
        <div
          class="v-messages theme--light"
        >
          <transition-group-stub
            class="v-messages__wrapper"
            name="message-transition"
            tag="div"
          />
        </div>
      </div>
    </div>
  </div>
  <div
    class="v-input v-input--is-label-active v-input--is-dirty theme--light v-text-field"
  >
    <div
      class="v-input__control"
    >
      <div
        class="v-input__slot"
      >
        <div
          class="v-text-field__slot"
        >
          <label
            class="v-label v-label--active theme--light"
            style="left: 0px; position: absolute;"
          >
            Note
          </label>
          <input
            type="text"
          />
        </div>
      </div>
      <div
        class="v-text-field__details"
      >
        <div
          class="v-messages theme--light"
        >
          <transition-group-stub
            class="v-messages__wrapper"
            name="message-transition"
            tag="div"
          />
        </div>
      </div>
    </div>
  </div>
  <c-enabled-field-stub
    label="Auto resolve"
    value="true"
  />
</div>
`;

exports[`manual-meta-alarm-form Renders \`manual-meta-alarm-form\` with default props 2`] = `undefined`;
